- 修复配置及错误